// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ResultSectionContent does not render, no rules 1`] = `<DocumentFragment />`;

exports[`ResultSectionContent does not render, no rules: RulesWithInstances props 1`] = `undefined`;

exports[`ResultSectionContent renders without modifier buttons without cardSelectionMessageCreator, with some rules 1`] = `
<DocumentFragment>
  <mock-ruleswithinstances
    deps="[object Object]"
    outcometype="pass"
    rules="[object Object]"
  />
</DocumentFragment>
`;

exports[`ResultSectionContent renders, with some rules 1`] = `
<DocumentFragment>
  <mock-ruleswithinstances
    cardselectionmessagecreator="[object Object]"
    deps="[object Object]"
    outcometype="pass"
    rules="[object Object]"
  />
</DocumentFragment>
`;
